--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }} - Flask Azure App</title>
-</head>
-<body>
-    <h1>Welcome to your Flask Azure App!</h1>
-    <p>This is a basic template to get you started.</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1 class="text-4xl font-bold mb-4">Welcome to your Flask Azure App!</h1>
+<p class="text-lg mb-8">This is a basic homepage with a header using Tailwind CSS.</p>
+<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+    Get Started
+</button>
+{% endblock %}
