Added Contact page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
                 <a href="{{ url_for('main.index') }}" class="hover:text-blue-300">Home</a>
                 <a href="{{ url_for('main.about') }}" class="hover:text-blue-300">About</a>
                 <a href="{{ url_for('main.bid_estimator') }}" class="hover:text-blue-300">Bid Estimator</a>
-                <a href="#" class="hover:text-blue-300">Contact</a>
+                <a href="{{ url_for('main.contact') }}" class="hover:text-blue-300">Contact</a>
             </div>
         </nav>
     </header>
