--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
-                    <a href="#" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105">
+                    <a href="{{ url_for('main.login') }}" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105 text-center">
                         Log In
                     </a>
                 </div>
@@ -41,7 +41,7 @@
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
-                    <a href="#" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105 text-center">
+                    <a href="{{ url_for('main.login') }}" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105">
                         Log In
                     </a>
                 </div>
