--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,8 +23,11 @@
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
-                    <a href="{{ url_for('main.login') }}" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105 text-center">
+                    <a href="{{ url_for('main.login') }}" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105">
                         Log In
+                    </a>
+                    <a href="{{ url_for('main.signup') }}" class="bg-green-500 text-white hover:bg-green-600 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105">
+                        Sign Up
                     </a>
                 </div>
                 <div class="md:hidden">
@@ -41,8 +44,11 @@
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
-                    <a href="{{ url_for('main.login') }}" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105">
+                    <a href="{{ url_for('main.login') }}" class="bg-white text-blue-500 hover:bg-blue-100 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105 text-center">
                         Log In
+                    </a>
+                    <a href="{{ url_for('main.signup') }}" class="bg-green-500 text-white hover:bg-green-600 font-bold py-2 px-6 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg transform hover:scale-105 text-center">
+                        Sign Up
                     </a>
                 </div>
             </div>
