--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,15 +23,13 @@
                     <a href="{{ url_for('main.about') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">About</a>
                     <a href="{{ url_for('main.bid_estimator') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Bid Estimator</a>
                     <a href="{{ url_for('main.contact') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Contact</a>
-                 
-                    
                     {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('main.custom_bidder') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Custom Bidder</a>
+                    <a href="{{ url_for('main.account') }}" class="text-lg font-medium hover:text-blue-100 transition duration-300 ease-in-out">Account</a>
                     <a href="{{ url_for('main.logout') }}">Logout</a>
-                {% else %}
+                    {% else %}
                     <a href="{{ url_for('main.login') }}">Login</a>
                     <a href="{{ url_for('main.signup') }}">Sign Up</a>
-                {% endif %}
+                    {% endif %}
                 </div>
                 <div class="md:hidden">
                     <button id="mobile-menu-btn" class="text-white focus:outline-none">
