--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,8 +20,8 @@
                     {% endif %}
                     {% endwith %}
                     <div class="mb-6">
-                        <label for="username" class="block text-gray-700 font-semibold mb-2">Username</label>
-                        <input type="text" id="username" name="username" class="w-full px-4 py-3 rounded-lg shadow-sm focus:outline-none focus:shadow-outline-blue focus:border-blue-300" placeholder="Enter your username" required>
+                        <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
+                        <input type="email" id="email" name="email" class="w-full px-4 py-3 rounded-lg shadow-sm focus:outline-none focus:shadow-outline-blue focus:border-blue-300" placeholder="you@example.com" required>
                     </div>
                     <div class="mb-6">
                         <label for="password" class="block text-gray-700 font-semibold mb-2">Password</label>
